[tool.poetry]
name = "snapshotter-mcp-server"
version = "0.1.0"
description = "MCP server for snapshotter-core"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
httpx = "^0.28.0"
pydantic-settings = "^2.0.0"
fastmcp = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
